--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,16 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chris Tran" # "Site Title"
+title                    : "Permadi Satya" # "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Chris Tran"
-description              : "Chris Tran's Portfolio"
+name                     : "Permadi Satya"
+description              : "Permadi Satya's Portfolio"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"    # should leave empty
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logo-707x200.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : # "/assets/images/logo-707x200.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 160
@@ -77,7 +77,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification : "v4DTrYOO1JCGDyFYkTQANpSTh5i19K2Fqjm5DurJj9w"
+google_site_verification : # "v4DTrYOO1JCGDyFYkTQANpSTh5i19K2Fqjm5DurJj9w"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -89,7 +89,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" # Open Graph/Twitter default site image
+og_image                 : #"https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -99,35 +99,35 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               : # "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-145578661-1"
+    tracking_id          : # "UA-145578661-1"
     anonymize_ip         : # true, false (default)
 
 
 # Site Author
 author:
-  name             : "Chris Tran"
-  avatar           : "/assets/images/profile-photo.png"
-  bio              : "<i>A learner,<br>a runner,<br> a stargazer.</i>"
+  name             : "Permadi Satya"
+  avatar           : "/assets/img/profile-photo.png"
+  bio              : "<i>A learner,<br>a thinker,<br> a designer.</i>"
   location         :
   email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:tranduckhanh96@gmail.com
+      url: mailto:satya.permadi.d@gmail.com
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/chriskhanhtran"
+      url: "https://github.com/permadisatya"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/chriskhanhtran/"
+      url: "https://www.linkedin.com/in/permadisatya/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/chriskhanhtran"
-    - label: "YouTube"
-      icon: "fab fa-fw fa-youtube"
-      url: https://www.youtube.com/channel/UCo8okHIdSppn_idUVuuebhg
+      url: "https://twitter.com/permadisatya"
+    #- #label: #"YouTube"
+      #icon: #"fab fa-fw fa-youtube"
+      #url: https://www.youtube.com/channel/UCo8okHIdSppn_idUVuuebhg
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
     #   # url: "https://your-website.com"
@@ -143,16 +143,16 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: https://github.com/chriskhanhtran   
+      url: https://github.com/permadisatya   
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: https://www.linkedin.com/in/chriskhanhtran/
+      url: https://www.linkedin.com/in/permadisatya/
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/chriskhanhtran"
-    - label: "YouTube"
-      icon: "fab fa-fw fa-youtube"
-      url: https://www.youtube.com/channel/UCo8okHIdSppn_idUVuuebhg      
+      url: "https://twitter.com/permadisatya"
+    #- #label: "YouTube"
+      #icon: "fab fa-fw fa-youtube"
+      #url: https://www.youtube.com/channel/UCo8okHIdSppn_idUVuuebhg      
   #  - label: "Twitter"
   #    icon: "fab fa-fw fa-twitter-square"
   #    # url:
