--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: permadisatya
 github_username:  permadisatya
 
 # Build settings
-# theme: minima
+theme: minima
 remote_theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
