--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ twitter_username: permadisatya
 github_username:  permadisatya
 
 # Build settings
-theme: minima
-remote_theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
 
